Fix alignment of post info for left article

--- a/app.css
+++ b/app.css
@@ -146,12 +146,11 @@ ul {
 .post-info {
   display: flex;
   justify-content: flex-start;
+  align-items: baseline;
 }
 
 .publish-date {
   display: flex;
-  position: relative;
-  top: 0.2rem;
   color: #bdbdbd;
   margin-left: 0.3rem;
   font-size: 0.8rem;
@@ -389,6 +388,7 @@ ul {
   display: flex;
   margin: 0 -0.5rem;
   padding-right: 0.8rem;
+  align-items: baseline;
 }
 
 .bottom-nav__item a {
